[package]
name = "compression"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
num-complex = "0.4"
rustfft = "6.1.0"
wav = "1.0.0"
bmp = "0.5.0"
plotly = { version = "0.8.3", features = ["kaleido"] }
serde = "1.0.152"
bincode = "1.3.3"
clap = { version = "4.1.6", features = ["derive"] }
